--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -769,6 +769,12 @@
           "subcategories_label": "Subcategories",
           "system": "System"
         },
+        "reconciliations_list": {
+          "balance_diff_label": "Divergence",
+          "cancel_action": "Cancel",
+          "name_label": "Date",
+          "status_label": "Status"
+        },
         "transaction_automations_list": {
           "amount_label": "Amount",
           "category_label": "Category",
