--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -52,6 +52,11 @@ en:
         system: System
         name_label: Name
         subcategories_label: Subcategories
+      reconciliations_list:
+        name_label: Date
+        status_label: Status
+        balance_diff_label: Divergence
+        cancel_action: Cancel
       transaction_automations_list:
         name_label: Transaction Name
         category_label: Category
