--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -410,6 +410,7 @@
         "password_too_long": "is too long",
         "present": "must be blank",
         "required": "must exist",
+        "spoofed_content_type": "has a content type that is not what it is declared through its content, filename and extension",
         "taken": "has already been taken",
         "too_long": {
           "one": "is too long (maximum is 1 character)",
@@ -419,6 +420,11 @@
           "one": "is too short (minimum is 1 character)",
           "other": "is too short (minimum is %{count} characters)"
         },
+        "total_file_size_not_between": "total file size must be between %{min_size} and %{max_size} (current size is %{total_file_size})",
+        "total_file_size_not_greater_than": "total file size must be greater than %{min_size} (current size is %{total_file_size})",
+        "total_file_size_not_greater_than_or_equal_to": "total file size must be greater than or equal to %{min_size} (current size is %{total_file_size})",
+        "total_file_size_not_less_than": "total file size must be less than %{max_size} (current size is %{total_file_size})",
+        "total_file_size_not_less_than_or_equal_to": "total file size must be less than or equal to %{max_size} (current size is %{total_file_size})",
         "wrong_length": {
           "one": "is the wrong length (should be 1 character)",
           "other": "is the wrong length (should be %{count} characters)"
