Implement basic dark mode

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -960,6 +960,10 @@
         "title": "Landing"
       },
       "layout": {
+        "color_modes": {
+          "dark": "Dark",
+          "light": "Light"
+        },
         "footer": {
           "copyright_notice": "© 2024 Rodrigo Castro",
           "version": "Version"
