--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -485,7 +485,8 @@ en:
         date_label: Date
         name_label: Name
         optional: Optional
-        submit: Create
+        submit_create: Create
+        submit_update: Update
         submit_and_continue: Create & Add Next
         cancel: Cancel
         locked_message: This transaction is locked by a reconciliation and can only have its name and category changed.
