--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -504,6 +504,25 @@ pt-BR:
         credit_transactions: Receitas
         debit_transactions: Gastos
         all_transactions: Todas
+      show:
+        title: Transação
+        edit: Editar
+        delete: Deletar
+        sub_header_summary: Resumo
+        name_label: Nome
+        amount_label: Valor
+        date_label: Data
+        category_label: Categoria
+        wallet_label: Carteira
+        transaction_automation_label: Criada através de
+        transaction_automation_value: Automação de Transação
+        import_label: Importada por
+        import_value: Importação de Transação
+        created_at_label: Criada em
+        created_by_label: Criada por
+        updated_at_label: Última atualização em
+        updated_by_label: Última atualização por
+        no_wallet: -- Não Especificada --
 
     transaction_automations:
       floating_button_label: Nova Automação de Transação
